--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,11 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
+    "@types/supertest": "^6.0.3",
     "prisma": "^6.14.0",
+    "supertest": "^7.1.4",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
