--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,10 @@
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "type-check": "tsc --noEmit",
-    "prod": "npm run build && npm start"
+    "prod": "npm run build && npm start",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
